test/should-fail/vsgc2278Sub.f3
/**
 * @subtest vsgc2278.f3
 */

package class vsgc2278Sub {
  public var x;
  protected function y() {};
}
